--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,19 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-web</artifactId>    
 		</dependency>
-		    	
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		     <version>8.0.15</version>
+		</dependency>	
+		
+		
 		
 	</dependencies>
 
